--- a/blocks/element/__img/element__img.css
+++ b/blocks/element/__img/element__img.css
@@ -1,4 +1,7 @@
 .element__img {
+  object-fit: cover;
   width: 282px;
+  height: 282px;
   border-radius: 10px 10px 0px 0px;
+  /* aspect-ratio: 1; */
 }
