--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   border-radius: 10px;
   background: #ffffff;
+  position: relative;
+  width: 282px;
 }
 
 @media screen and (max-width: 1000px) {
