--- a/pages/index.css
+++ b/pages/index.css
@@ -5,10 +5,13 @@
 @import url(../blocks/element/__img/element__img.css);
 @import url(../blocks/element/__info/element__info.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like/element_like_button-active.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/element.css);
-
+@import url(../blocks/element/__delete-button/element__delete-button.css);
+/* @import url(../blocks/element/_like/element_like_button.css); */
 @import url(../blocks/elements/elements.css);
+/* @import url(../blocks/element/__like/element_like_button.css); */
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__name/footer__name.css);
@@ -38,3 +41,14 @@
 @import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+
+@import url(../blocks/popup/__caption/popup__caption.css);
+
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__close/popup__close.css);
+
+@import url(../blocks/popup-image/popup-image.css);
+@import url(../blocks/popup-image/_opened/popup-image_opened.css);
+@import url(../blocks/popup-image/__text/popup-image__text.css);
+@import url(../blocks/popup-image/__picture/popup-image__picture.css);
+@import url(../blocks/popup-image/__container/popup-image__container.css);
