--- a/blocks/elements/__grid/elements__grid.css
+++ b/blocks/elements/__grid/elements__grid.css
@@ -1,10 +1,12 @@
 .elements__grid {
   display: grid;
+  max-width: 880px;
+  margin: 0 auto;
   grid-template-columns: repeat(auto-fit, 282px);
   grid-gap: 17px;
   row-gap: 20px;
   padding: 0;
-  margin: 0;
+  /* margin: 0; */
 }
 @media screen and (max-width: 1000px) {
   .elements__grid {
@@ -22,7 +24,7 @@
   }
 }
 
-.elements__grid {
+/* .elements__grid {
   max-width: 880px;
   margin: 0 auto;
 }
@@ -31,4 +33,4 @@
     row-gap: 20px;
     max-width: 282px;
   }
-}
+} */
