--- a/blocks/popup-image/popup-image.css
+++ b/blocks/popup-image/popup-image.css
@@ -9,7 +9,6 @@
   right: 0;
   bottom: 0;
   left: 0;
-  visibility: hidden;
   opacity: 0;
-  transition: all 0.5s ease 0s;
+  transition: visibility 0.5s ease-in-out, opacity 0.5s ease-in-out;
 }
