--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -10,4 +10,8 @@
   justify-content: center;
   z-index: 1;
   background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.5s ease-in-out, opacity 0.5s ease-in-out;
 }
