--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,11 +1,9 @@
 .profile__avatar {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-@media screen and (max-width: 767px) {
-  .profile__avatar {
-    align-self: center;
-  }
+.profile__avatar:hover {
+  opacity: 0.2;
 }
