--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,8 @@
 
 /* @import url(../blocks/elements/elements.css); */
 
+/* @import url(../blocks/button/button.css); */
+
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__name/footer__name.css);
 
@@ -30,6 +32,10 @@
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/profile/__user/profile__user.css);
 
+/* @import url(../blocks/profile/__button-avatar/profile__button-avatar.css); */
+@import url(../blocks/profile/__avatar-buttom/profile__avatar-button.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
+
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__info/form__info.css);
@@ -41,6 +47,12 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__close/popup__icon.css);
+@import url(../blocks/form/__button/form__button_inactive.css);
+@import url(../blocks/form/__input-error/form__input-error.css);
+@import url(../blocks/form/__input-error/_active/form__input-error_active.css);
+
+@import url(../blocks/form/__set/form__set.css);
+@import url(../blocks/form/__field/form__field.css);
 
 @import url(../blocks/popup-image/popup-image.css);
 @import url(../blocks/popup-image/__text/popup-image__text.css);
