--- a/blocks/element/__info/element__info.css
+++ b/blocks/element/__info/element__info.css
@@ -1,5 +1,6 @@
 .element__info {
   display: flex;
+  /* flex-direction: column; */
   justify-content: space-between;
   align-items: center;
   padding: 25px 21px 25px;
