--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,8 @@
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__delete-button/element__delete-button.css);
 @import url(../blocks/elements/elements__grid.css);
+@import url(../blocks/element/__like-counter/element__like-counter.css);
+@import url(../blocks/element/__like-container/elements__like-container.css);
 
 /* @import url(../blocks/elements/elements.css); */
 
