--- a/src/blocks/popup/__close/popup__close-icon.css
+++ b/src/blocks/popup/__close/popup__close-icon.css
@@ -1,28 +1,20 @@
-.popup__button {
+.popup__close-icon {
   width: 32px;
   height: 32px;
-  background-image: url(../../../images/Close\ Icon.svg);
+  background-image: url(../../../images/closeicon.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-color: transparent;
   background-size: cover;
   border: 0;
   padding: 0;
-  transition: 0.1s;
+  margin: 0;
   cursor: pointer;
   position: absolute;
   top: -40px;
   right: -40px;
 }
 
-.popup__button:hover {
+.popup__close-icon:hover {
   opacity: 0.6;
-}
-
-@media screen and (max-width: 600px) {
-  .popup__button {
-    width: 20px;
-    height: 20px;
-    right: 0px;
-  }
 }
