--- a/src/blocks/profile/__avatar-container/profile__avatar-container.css
+++ b/src/blocks/profile/__avatar-container/profile__avatar-container.css
@@ -1,18 +1,18 @@
 .profile__avatar-container {
   width: 120px;
   height: 120px;
+  object-fit: cover;
   position: relative;
-  border-radius: 50%;
   overflow: hidden;
 }
 
 @media screen and (max-width: 767px) {
   .profile__avatar-container {
-    margin-right: 0;
     align-self: center;
   }
 }
+
+/* добработать оверлайн*/
 .profile__avatar-container:hover > .profile__avatar-button {
   visibility: visible;
-  opacity: 1;
 }
