--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,8 +2,6 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-.profile__avatar:hover {
-  opacity: 0.2;
+  border-radius: 50%;
+  position: relative;
 }
